Clean out stuff:
- warnings on groovy dependency
- commented-out code
- internal maven repository

--- a/build.gradle
+++ b/build.gradle
@@ -10,23 +10,8 @@ repositories {
     }
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "http://nexus.corp.macermedia.com/nexus/content/repositories/releases")
-        }
-    }
-}
-
 dependencies {
     compile gradleApi()
     compile "org.apache.avro:avro-compiler:${version}"
-    groovy "org.codehaus.groovy:groovy-all:${groovyVersion}"
+    compile "org.codehaus.groovy:groovy-all:${groovyVersion}"
 }
-
-
-/*
-jar {
-    dependsOn configurations.runtime
-    from { configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) } }
-}*/
